[BE] 도메인 로직 수정